Redesigned front page
New nav bar
Small intro header with animated subtitle
Goal is to use as much custom CSS as possible

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-nav>
-<!--  Remainder of components go in here-->
-</app-nav>
+<app-nav></app-nav>
+<div class="main-container">
+  <div class="intro">
+    <div class="header">Hi, I'm Scott <div class="last-name">Corbat</div></div>
+    <div class="subtitle">I am a <app-i-am-a></app-i-am-a></div>
+  </div>
+</div>
