--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,21 +1,23 @@
-.sidenav-container {
-  height: 100%;
+nav ul {
+  float: right;
+  list-style: none;
+  display: flex;
+  margin-right: 20%;
 }
 
-.sidenav {
-  width: 200px;
+nav ul li {
+  margin: 10px 30px;
 }
 
-.sidenav .mat-toolbar {
-  background: inherit;
+a {
+  font-size: 18px;
+  color: white;
+  padding: 10px 15px;
+  background-color: inherit;
+  border-radius: 20px;
+  transition: background-color 0.2s;
 }
 
-.mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
-}
-
-mat-icon {
-  margin-right: 20px;
+a:hover {
+  background-color: coral;
 }
