Created projects page
Uses flex box to display properly
Using neumorphism design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
 <app-nav></app-nav>
-<div class="main-container">
-  <div class="intro">
-    <div class="header">Hi, I'm Scott <div class="last-name">Corbat</div></div>
-    <div class="subtitle">I am a <app-i-am-a></app-i-am-a></div>
-  </div>
-</div>
+<router-outlet></router-outlet>
