--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -11,6 +11,7 @@ nav ul li {
 
 a {
   font-size: 18px;
+  text-decoration: none;
   color: white;
   padding: 10px 15px;
   background-color: inherit;
