--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li><a>About</a></li>
-    <li><a>Projects</a></li>
+    <li><a routerLink="/projects">Projects</a></li>
     <li><a>Contact Me</a></li>
   </ul>
 </nav>
