--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -10,15 +10,38 @@ nav ul li {
 }
 
 a {
+  position: relative;
   font-size: 18px;
   text-decoration: none;
   color: white;
   padding: 10px 15px;
   background-color: inherit;
   border-radius: 20px;
-  transition: background-color 0.2s;
 }
 
-a:hover {
-  background-color: coral;
+.selected::after {
+  content: '';
+  background: coral repeat scroll 0 0;
+  bottom: 0;
+  height: 2px;
+  left: 0;
+  position: absolute;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 100%;
+}
+
+a::after {
+  content: '';
+  background: coral repeat scroll 0 0;
+  bottom: 0;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+a:hover::after {
+  width: 100%;
+  left: 0;
 }
