--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,8 @@
 <nav>
   <ul>
-    <li><a>About</a></li>
-    <li><a routerLink="/projects">Projects</a></li>
-    <li><a>Contact Me</a></li>
+    <li><a routerLink="/" routerLinkActive="selected" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
+    <li><a>Skills</a></li>
+    <li><a routerLink="/projects" routerLinkActive="selected">Projects</a></li>
+    <li><a routerLink="/contact" routerLinkActive="selected">Contact Me</a></li>
   </ul>
 </nav>
