--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,13 +1,13 @@
 .container {
-  background-color: #ECF0F3;
+  background-image: url("../../assets/images/main-bg.png");
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .projects {
   position: absolute;
-  width: inherit;
   top: 20%;
+  width: inherit;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
