--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,10 +1,12 @@
 <div class="container">
+  <h1>My Projects</h1>
+
   <div class="projects">
     <app-project-item
       title="Portfolio Website"
       imageName="main-bg.png"
       description="This website is made using Angular."
-      sourceCodeLink=""
+      sourceCodeLink="https://github.com/combateer3/Angular-Website"
     ></app-project-item>
 
     <app-project-item
