--- a/src/app/contact-me/contact-me.component.css
+++ b/src/app/contact-me/contact-me.component.css
@@ -1,5 +1,4 @@
 .container {
-  background-image: url("../../assets/images/main-bg.png");
   width: 100%;
   height: 100%;
   display: flex;
@@ -35,7 +34,7 @@ input, textarea {
 
 textarea {
   padding-top: 20px;
-}A
+}
 
 input {
   height: 3em;
