--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,15 +1,18 @@
 .container {
-  background-image: url("../../assets/images/main-bg.png");
   width: 100%;
-  height: 100%;
+  height: 90%;
 }
 
 .projects {
-  position: absolute;
-  top: 20%;
   width: inherit;
+  height: inherit;
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  justify-content: space-around;
+}
+
+h1 {
+  text-align: center;
+  color: white;
 }
