Added background selector
Displays on home page as a "show off" feature
Can support image or video backgrounds
Uses a model and service to manage which background is current

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="app">
+<div class="app" [ngStyle]="{backgroundImage: isVideoBg ? 'none' : 'url(\' ' + backgroundPath + '\')'}">
+  <video *ngIf="isVideoBg" [src]="backgroundPath" autoplay muted loop></video>
   <app-nav></app-nav>
   <router-outlet></router-outlet>
 </div>
