--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,5 @@
     <div class="header">Hi, I'm Scott <div class="last-name">Corbat</div></div>
     <div class="subtitle">I am a <app-i-am-a></app-i-am-a></div>
   </div>
+  <app-background-selector></app-background-selector>
 </div>
