--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,18 @@
 .app {
   display: flex;
   flex-direction: column;
-  background-image: url("../assets/images/main-bg.png");
+  background-size: cover;
   background-attachment: fixed;
   height: 100%;
   overflow: hidden;
+}
+
+/* video tag used for background, so should have low z index */
+video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /* higher z-index causes other content to be scrolled behind the navbar */
@@ -17,8 +25,7 @@ app-nav {
 
 /* ng deep makes this a global style */
 ::ng-deep router-outlet + * {
-  position: absolute;
-  top: 100px;
+  margin-top: 80px;
   width: 100%;
   flex-grow: 1;
   z-index: 1;
