--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,8 @@
 .main-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  height: 100%;
+  justify-content: space-around;
 }
 
 app-i-am-a {
